syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "SubmissionEvents.proto";

message SubmissionFSMCreatedMessage {
    SubmissionMessage submission = 1;
}
message SubmissionUploadingMessage {
    SubmissionMessage submission = 1;
}
message SubmissionUploadedMessage {
    SubmissionMessage submission = 1;
}
message SubmissionParsingMessage {
    SubmissionMessage submission = 1;
}
message SubmissionParsedMessage {
    SubmissionMessage submission = 1;
}
message SubmissionParsedWithErrorsMessage {
    SubmissionMessage submission = 1;
}
message SubmissionValidatingMessage {
    SubmissionMessage submission = 1;
}
message SubmissionValidatedMessage {
    SubmissionMessage submission = 1;
}
message SubmissionValidatedWithErrorsMessage {
    SubmissionMessage submission = 1;
}
message SubmissionSignedMessage {
    SubmissionMessage submission = 1;
}
message SubmissionFailedMessage {
    SubmissionMessage submission = 1;
}
